<resources>
    <string name="app_name">GDL</string>
    <string name="cateory">Shop by category</string>
    <string name="termscondition">Privacy Policy   Terms &amp; Conditions   Purchase Order Terms</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="purchase_order_terms">Purchase Order Terms</string>
    <string name="store_directory">Store Directory</string>
    <string name="copyright">Copyright © 2025 Gilani’s</string>
    <string name="purchase_terms">Purchase Order Terms</string>
    <string name="ic_create">Create an account</string>
    <string name="past_purchase">Past purchases</string>
    <string name="popular_items">Popular items</string>
    <string name="groceries">Groceries</string>
    <string name="electronics">Electronics</string>
    <string name="signup"><u>Sign up now</u></string>
    <string name="gilanis">Gilani\'s App</string>
    <string name="download">Download the app and shop quickly from your phone</string>
    <string name="signin">Sign in</string>
    <string name="werecommend">We recommend this option only on devices that you own</string>
    <string name="keepsignedin">Keep me signed in on this device</string>
    <string name="signinacc">Sign in to your Account</string>
    <string name="emailmobile">Mobile number </string>
    <string name="password">Password</string>
    <string name="forgotten">Recover my password</string>
    <string name="register">Register now</string>
    <string name="wearepleased">We are pleased to help you get started shopping online at Gilani’s.\nWe need a few basic details to set up your account.</string>
    <string name="starttyping">Start typing and select your address</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="passwordcontains">Your password must contain all of these: • 8 to 60 characters, 1 letter, 1 number, 1 special symbol</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_reenter">Please re-enter the password you just created. For your security, do not copy/paste the password</string>
    <string name="createaccount">Create account</string>
    <string name="fruit">Fresh fruit</string>
    <string name="fruit_descrp">Wambugu apples direct from farm to table etettwtetwtwettttt</string>
    <string name="shopnow">Shop now</string>
    <string name="google_maps_key">AIzaSyBMb7-GJFu47x0IL3bMuRl_vtcX9tMlpBo</string>
    <string name="bycreating">By creating a Gilian\'s account, you are agreeing to our terms and conditions (opens in new window). Read our privacy policy (opens in new window) to know how we collect and use your personal data.</string>
    <string name="asterisk">*</string>
    <string name="reviews">Reviews</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="where_do_you_want_us_to_deliver">Where do you want us to deliver</string>
    <string name="this_will_help_us_find_the_nearest_store_for_you">This will help us find the nearest store for you</string>
    <string name="far_away_from_my_current_location">Far away from my current location</string>
    <string name="near_my_current_location">Near my current location</string>
    <string-array name="uom_options">
        <item>Carton</item>
        <item>Bale</item>
        <item>6 PCS</item>
    </string-array>

</resources>