<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding_4dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/featureItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <!-- Overlay -->
            <View
                android:id="@+id/overlay"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#66000000"
                app:layout_constraintTop_toTopOf="@id/featureItem"
                app:layout_constraintBottom_toBottomOf="@id/featureItem"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/featureName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_24dp"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/fruit"
                android:textColor="@color/white"
                android:textAppearance="@style/header_title"
                app:layout_constraintTop_toTopOf="@id/featureItem"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/featureDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_default"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/fruit_descrp"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/padding_6dp"
                android:layout_marginStart="@dimen/padding_6dp"
                android:textAppearance="@style/textview"
                app:layout_constraintTop_toBottomOf="@id/featureName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnShopNow"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/padding_32dp"
                android:layout_marginBottom="@dimen/padding_24dp"
                android:background="@drawable/rounded_button_bg"
                android:gravity="center"
                android:text="@string/shopnow"
                android:textAllCaps="false"
                android:paddingEnd="@dimen/padding_30dp"
                android:paddingStart="@dimen/padding_30dp"
                android:textAppearance="@style/textview"
                android:textColor="#18181B"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
