<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image">

    <LinearLayout
        android:id="@+id/top_links"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_home"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_backarrow"
            android:drawablePadding="@dimen/padding_8dp"
            android:fontFamily="@font/sourcesanregular"
            android:text="Home"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/textsize_13sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_lock"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_lock" />

        <TextView
            android:id="@+id/tv_secure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sourcesanregular"
            android:text="glanisonline.com is secure"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_13sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@id/footer_links"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_links">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/signinacc"
                android:textAppearance="@style/header_title" />


            <TextView
                android:id="@+id/tx_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/padding_24dp"
                android:text="@string/emailmobile"
                android:textAppearance="@style/textview" />

            <EditText
                android:id="@+id/et_email_mobile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edt_height"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edittext_background"
                android:hint="Mobile number"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/edittext" />


            <TextView
                android:id="@+id/tx_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="12dp"
                android:text="@string/password"
                android:textColor="#424242"
                android:textSize="14sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/padding_6dp"
                    android:background="@drawable/edittext_background"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:textAppearance="@style/edittext" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="41dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:layout_toLeftOf="@+id/iv_toggle_password"
                    android:background="@color/light_gray">

                </View>

                <ImageView
                    android:id="@+id/iv_toggle_password"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/padding_2dp"
                    app:tint="@color/hint_text" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/padding_2dp"
                android:text="OR"
                android:textSize="16sp"
                android:visibility="invisible">

            </TextView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send_otp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/rounded_btn_all"
                android:gravity="center"
                android:text="Login with OTP"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:visibility="gone" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/padding_6dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_btn_all"
                android:gravity="center"
                android:text="@string/signin"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_backgroundborder"
                android:gravity="center"
                android:visibility="gone"
                app:cardBackgroundColor="@color/white">

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/padding_8dp"
                    android:text="@string/forgotten"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_8dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/padding_8dp"
                    android:text="Don't have an account?"
                    android:textAppearance="@style/textview"
                    android:textSize="@dimen/textsize_14sp" />

                <TextView
                    android:id="@+id/tv_register_now"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/rounded_button_bg"
                    android:gravity="center"
                    android:padding="@dimen/padding_6dp"
                    android:text="@string/register"
                    android:textAppearance="@style/price_title" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/footer_links"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_70dp"
        android:background="#F4F4F4"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_4dp"
            android:layout_marginBottom="@dimen/padding_2dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="Privacy Policy"
                android:textAppearance="@style/textview"
                android:textColor="@color/bottom_text"
                android:textSize="@dimen/textsize_12sp" />

            <TextView
                android:id="@+id/tv_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/terms_conditions"
                android:textAppearance="@style/textview"
                android:textColor="@color/bottom_text"
                android:textSize="@dimen/textsize_12sp" />

            <TextView
                android:id="@+id/tv_purchase_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Purchase Order Terms"
                android:textAppearance="@style/textview"
                android:textColor="@color/bottom_text"
                android:textSize="@dimen/textsize_12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_store_directory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Store Directory"
            android:textAppearance="@style/textview"
            android:textColor="@color/bottom_text"
            android:textSize="@dimen/textsize_12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_copyright"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_default"
                android:layout_weight="0.9"
                android:text="@string/copyright"
                android:textAppearance="@style/textview"
                android:textColor="@color/bottom_text"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/iv_icon3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/iv_icon4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_twitter" />

            <ImageView
                android:id="@+id/iv_icon5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_linkedin" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
